--- a/news/src/main/res/layout/fragment_index.xml
+++ b/news/src/main/res/layout/fragment_index.xml
@@ -22,14 +22,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_centerVertical="true"
+                app:tabSelectedTextColor="@color/red_500"
                 app:tabMode="scrollable" />
 
-            <View
-                android:layout_width="20dp"
-                android:layout_height="40dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/bg_alpha" />
+            <!--<View-->
+                <!--android:layout_width="20dp"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:background="@drawable/bg_alpha" />-->
         </RelativeLayout>
 
         <ImageView
