--- a/news/src/main/res/layout/item_fragment_center.xml
+++ b/news/src/main/res/layout/item_fragment_center.xml
@@ -3,15 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
-    android:background="#ECF1F5"
     android:orientation="vertical">
     <ImageView
+        android:tag="skin"
         android:id="@+id/item_fragment_center_icon"
         android:scaleType="centerCrop"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@mipmap/ic_launcher"/>
     <TextView
+        android:tag="skin"
+        android:textColor="@color/custom_color_text_main"
         android:layout_marginTop="5dp"
         android:id="@+id/tv_item_fragment_center_title"
         android:layout_width="wrap_content"
