--- a/chat/src/main/res/layout/activity_main_container.xml
+++ b/chat/src/main/res/layout/activity_main_container.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/custom_color_app_bg"
+    android:tag="skin"
     android:fitsSystemWindows="true">
 
     <include android:id="@+id/header_layout_id"
@@ -23,7 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tv_main_net"
-        android:background="@color/chat_bg"
     />
     <ImageView
         android:id="@+id/iv_main_bg"
