--- a/commonlibrary/src/main/res/layout/header_layout.xml
+++ b/commonlibrary/src/main/res/layout/header_layout.xml
@@ -1,77 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.AppBarLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/header_container"
+    android:id="@+id/app_bar_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:tag="skin"
+    android:background="@color/custom_color_app_title_bg"
+    app:elevation="10dp">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar_layout"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:elevation="10dp">
+        android:layout_height="?attr/actionBarSize">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingRight="10dp">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:tag="skin"
+                android:id="@+id/iv_header_layout_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_back" />
+
+            <com.example.commonlibrary.cusotomview.RoundAngleImageView
+                android:id="@+id/riv_header_layout_icon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/iv_header_layout_back"
+                android:scaleType="centerCrop"
+                app:roundHeight="25dp"
+                app:roundWidth="25dp" />
+
+            <TextView
+                android:tag="skin"
+                android:id="@+id/tv_header_layout_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@id/riv_header_layout_icon"
+                android:text="标题"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
+
+            <TextView
+                android:tag="skin"
+                android:id="@+id/tv_header_layout_right"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:paddingRight="10dp">
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:text="保存"
+                android:textColor="@color/custom_color_text_main"
+                android:textSize="16sp" />
 
-                <ImageView
-                    android:id="@+id/iv_header_layout_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_arrow_back_white_900_24dp" />
+            <ImageView
+                android:id="@+id/iv_header_layout_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true" />
 
-                <com.example.commonlibrary.cusotomview.RoundAngleImageView
-                    android:id="@+id/riv_header_layout_icon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@id/iv_header_layout_back"
-                    android:scaleType="centerCrop"
-                    app:roundHeight="25dp"
-                    app:roundWidth="25dp" />
+        </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/tv_header_layout_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:layout_toRightOf="@id/riv_header_layout_icon"
-                    android:text="标题"
-                    android:textColor="@color/base_color_text_black"
-                    android:textSize="16sp" />
+    </android.support.v7.widget.Toolbar>
+</android.support.design.widget.AppBarLayout>
 
-                <TextView
-                    android:id="@+id/tv_header_layout_right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
-                    android:text="保存"
-                    android:textColor="@color/base_color_text_black"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:id="@+id/iv_header_layout_right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true" />
-
-            </RelativeLayout>
-
-        </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
-
-
-</RelativeLayout>
