--- a/news/src/main/res/layout/fragment_center.xml
+++ b/news/src/main/res/layout/fragment_center.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.commonlibrary.baseadapter.SuperRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/srcv_fragment_center_display"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
-    <com.example.commonlibrary.baseadapter.SuperRecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/srcv_fragment_center_display"/>
-
-</LinearLayout>
+    android:layout_height="match_parent" />
