--- a/news/src/main/res/menu/home_menu_layout.xml
+++ b/news/src/main/res/menu/home_menu_layout.xml
@@ -27,6 +27,11 @@
                 android:icon="@drawable/ic_news_photo"
                 android:title="背景" />
 
+            <item
+                android:id="@+id/main_sub_item_skin"
+                android:icon="@drawable/ic_news_photo"
+                android:title="换肤" />
+
 
         </menu>
 
