[fix]修復皮膚插件等bug

--- a/chat/src/main/res/layout/fragment_friends.xml
+++ b/chat/src/main/res/layout/fragment_friends.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
 
     <SearchView
         android:id="@+id/sv_fragment_friends_search"
-        android:background="@color/white"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
