--- a/chat/src/main/res/layout/item_activity_skin_list.xml
+++ b/chat/src/main/res/layout/item_activity_skin_list.xml
@@ -6,11 +6,26 @@
     android:orientation="vertical">
 
 
-    <ImageView
-        android:id="@+id/iv_item_activity_skin_list_image"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="fitCenter"/>
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="200dp">
+       <ImageView
+           android:id="@+id/iv_item_activity_skin_list_image"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:scaleType="fitCenter"/>
+       <CheckBox
+           android:id="@+id/cb_item_activity_skin_list_check"
+           android:layout_alignParentBottom="true"
+           android:layout_alignParentRight="true"
+           android:layout_marginBottom="10dp"
+           android:layout_marginRight="10dp"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:enabled="false"
+           android:checked="true"/>
+
+   </RelativeLayout>
 
     <TextView
         android:maxLines="1"
