--- a/news/src/main/res/menu/home_menu_layout.xml
+++ b/news/src/main/res/menu/home_menu_layout.xml
@@ -30,8 +30,12 @@
             <item
                 android:id="@+id/main_sub_item_skin"
                 android:icon="@drawable/ic_news_photo"
-                android:title="换肤" />
+                android:title="重置皮肤" />
 
+            <item
+                android:id="@+id/main_sub_item_skin_center"
+                android:icon="@drawable/ic_news_photo"
+                android:title="皮肤中心" />
 
         </menu>
 
