--- a/skin/src/main/res/values/colors.xml
+++ b/skin/src/main/res/values/colors.xml
@@ -12,7 +12,13 @@
     <color name="custom_color_app_bg">#FF171717</color>
     <color name="custom_color_app_title_bg">#FF191919</color>
     <color name="custom_color_app_content_bg">#ff343a49</color>
-    <color name="custom_color_app_content_div">#101010</color>
+    <color name="custom_color_text_main">#FF999999</color>
+    <color name="custom_color_text_sub">#FF666666</color>
+    <color name="custom_color_app_content_div">#FF191919</color>
+
+
+
+
 
 
 
