[fix]修复系统通知的推送bug

--- a/app/src/main/res/layout/activity_splash_main.xml
+++ b/app/src/main/res/layout/activity_splash_main.xml
@@ -7,7 +7,7 @@
 
 
     <ImageView
-        android:background="@color/white"
+        android:src="@drawable/login_container_bg_03"
         android:id="@+id/iv_activity_splash_main_display"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
