--- a/chat/src/main/res/layout/nearby_people_item_layout.xml
+++ b/chat/src/main/res/layout/nearby_people_item_layout.xml
@@ -13,6 +13,7 @@
         android:layout_centerVertical="true"
         android:src="@drawable/head"
         app:roundHeight="25dp"
+        android:scaleType="centerCrop"
         app:roundWidth="25dp"/>
     <LinearLayout
         android:layout_width="match_parent"
