[feature] 添加计步器功能

--- a/news/src/main/res/menu/home_menu_layout.xml
+++ b/news/src/main/res/menu/home_menu_layout.xml
@@ -27,6 +27,12 @@
                 android:icon="@drawable/ic_news_photo"
                 android:title="背景" />
 
+
+            <item
+                android:id="@+id/main_sub_item_step"
+                android:icon="@drawable/ic_news_photo"
+                android:title="计步器" />
+
             <item
                 android:id="@+id/main_sub_item_skin"
                 android:icon="@drawable/ic_news_photo"
