[fix]修复图片错位bug

--- a/commonlibrary/src/main/res/values/ids.xml
+++ b/commonlibrary/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="fl_empty_layout" type="id"/>
     <item name="header_layout_id" type="id"/>
+    <item name="image_url_tag" type="id"/>
 </resources>
