[fix&feature] 修复图片错位和添加沉浸状态栏

--- a/chat/src/main/res/layout/item_image_share_holder.xml
+++ b/chat/src/main/res/layout/item_image_share_holder.xml
@@ -3,5 +3,4 @@
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:scaleType="centerCrop"
-android:id="@+id/iv_item_image_share_holder_display"
-android:src="@drawable/head"/>
+android:id="@+id/iv_item_image_share_holder_display"/>
