--- a/commonlibrary/src/main/res/values/ids.xml
+++ b/commonlibrary/src/main/res/values/ids.xml
@@ -3,4 +3,7 @@
     <item name="fl_empty_layout" type="id"/>
     <item name="header_layout_id" type="id"/>
     <item name="image_url_tag" type="id"/>
+
+    <item type="id" name="statusbarutil_fake_status_bar_view" />
+    <item type="id" name="statusbarutil_translucent_view" />
 </resources>
