--- a/commonlibrary/src/main/res/values/styles.xml
+++ b/commonlibrary/src/main/res/values/styles.xml
@@ -11,6 +11,8 @@
 
     <style name="CustomTheme" parent="AppTheme">
         <item name="windowActionBar">false</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:windowBackground">@color/transparent</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
